Replace basics-starter-code GitHub URL with fundamentals-starter-code

--- a/2-basic-data-manipulation/2.3-our-first-program.md
+++ b/2-basic-data-manipulation/2.3-our-first-program.md
@@ -4,9 +4,9 @@
 
 At the end of this lesson, you should be able to:
 
-* Briefly explain what _String Values_ are.
-* **Concatenate** _String Variables_ together using the `+` **operator.**
-* Perform simple manipulation on user input of the Basics Starter Code template.
+- Briefly explain what _String Values_ are.
+- **Concatenate** _String Variables_ together using the `+` **operator.**
+- Perform simple manipulation on user input of the Basics Starter Code template.
 
 ## Introduction
 
@@ -16,7 +16,7 @@ Let's run code outside the browser console. We'll create a basic program with a 
 
 ## Setup
 
-1. [Download the zipped folder](https://github.com/rocketacademy/basics-starter-code/archive/refs/heads/main.zip) of the Coding Basics Starter template and extract it to an appropriate location in your computer - see the [suggested folder structure](../course-logistics/required-hardware-and-software/recommended-set-up.md#folder-structure-for-coding-basics).
+1. [Download the zipped folder](https://github.com/rocketacademy/fundamentals-starter-code/archive/refs/heads/main.zip) of the Coding Basics Starter template and extract it to an appropriate location in your computer - see the [suggested folder structure](../course-logistics/required-hardware-and-software/recommended-set-up.md#folder-structure-for-coding-basics).
 2. [Open your Basics folder in VSCode](../course-logistics/required-hardware-and-software/recommended-set-up.md#open-basics-folder-in-vscode).
 
 ## **Static Program Output**
@@ -34,10 +34,10 @@ Next, we'll change the output in the output box from the default to our own text
 Open the `script.js` file in your editor. You should see the following.
 
 ```javascript
-console.log('hello');
+console.log("hello");
 
 var main = function (input) {
-  var myOutputValue = 'hello world';
+  var myOutputValue = "hello world";
   return myOutputValue;
 };
 ```
@@ -113,13 +113,15 @@ var myOutputValue = input;
 Now whatever we type in the input box gets output to the output box.
 
 {% hint style="info" %}
+
 #### String Data
 
 `input` is always of a data type called "string". \[Wikipedia]\(https://en.wikipedia.org/wiki/String\_(computer\_science) defines a string as a "sequence of characters", where characters are typically the characters on our keyboards. Strings can also contain spaces, punctuation, numeric digits, emojis, Chinese characters, or writing in other languages. Strings are different from numbers in that numbers represent numeric values and not text. Here is an example of a string stored in a variable.
 
 ```javascript
-var name = 'Susan';
+var name = "Susan";
 ```
+
 {% endhint %}
 
 ### Interactive Messages
@@ -137,7 +139,7 @@ var myOutputValue = input;
 We will now create a program with purpose. The user will type their name, and we will use the name to greet them. To do this we'll take `input` and combine it with other strings to generate output.
 
 ```javascript
-var myOutputValue = 'Hello ' + input + ', you look great today!';
+var myOutputValue = "Hello " + input + ", you look great today!";
 ```
 
 Change your program output to a different message. Make it longer. You can even use `input` more than once, for example, "Hello, Susan! Wow, Susan is a great name. Reminds me of this movie star..."
@@ -171,15 +173,16 @@ To achieve this, combine calculated values with string values like the following
 
 ```javascript
 var myOutputValue =
-  'Hi! ' + input + ' is equal to ' + distanceInMiles + ' miles.';
+  "Hi! " + input + " is equal to " + distanceInMiles + " miles.";
 ```
 
 {% hint style="info" %}
-A common alternative to the above string formatting is to use [JavaScript template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template\_literals). The following syntax is equivalent to the syntax above.
+A common alternative to the above string formatting is to use [JavaScript template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals). The following syntax is equivalent to the syntax above.
 
 ```javascript
 var myOutputValue = `Hi! ${input} is equal to ${distanceInMiles} miles.`;
 ```
+
 {% endhint %}
 
 ## Exercise
