--- a/8-github/8.2-github-fork-and-clone.md
+++ b/8-github/8.2-github-fork-and-clone.md
@@ -4,9 +4,9 @@
 
 At the end of this lesson, you should:
 
-* Be able to use the GitHub Fork feature.
-* Be able to use the `git clone` command.
-* Be able to use the `git push` command.
+- Be able to use the GitHub Fork feature.
+- Be able to use the `git clone` command.
+- Be able to use the `git push` command.
 
 ## Introduction
 
@@ -30,7 +30,7 @@ In the below video we demonstrate `git push origin master`, but for Coding Basic
 
 ## Git Clone
 
-We'll use a Git command to download or "clone" a copy of Coding Basics starter code. `<REPO_DOWNLOAD_URL>` is the download URL of our repo, obtained by clicking the Download Code button on the repo's [GitHub page](https://github.com/rocketacademy/basics-starter-code). `<LOCAL_REPO_FOLDER_NAME>` is the name of the destination folder that is created (containing the contents of the repo) when we run the Git command.
+We'll use a Git command to download or "clone" a copy of Coding Basics starter code. `<REPO_DOWNLOAD_URL>` is the download URL of our repo, obtained by clicking the Download Code button on the repo's [GitHub page](https://github.com/rocketacademy/fundamentals-starter-code). `<LOCAL_REPO_FOLDER_NAME>` is the name of the destination folder that is created (containing the contents of the repo) when we run the Git command.
 
 **Command Template**
 
@@ -41,7 +41,7 @@ git clone <REPO_DOWNLOAD_URL> <LOCAL_REPO_FOLDER_NAME>
 **Sample Command**
 
 ```
-git clone https://github.com/rocketacademy/basics-starter-code.git basics-starter-code-test
+git clone https://github.com/rocketacademy/fundamentals-starter-code.git fundamentals-starter-code-test
 ```
 
 ![Clone a repo onto your computer from GitHub](../.gitbook/assets/github-clone.png)
