--- a/3-structuring-and-debugging-code/3.1-functions.md
+++ b/3-structuring-and-debugging-code/3.1-functions.md
@@ -4,13 +4,13 @@
 
 By the end of this lesson, you should be able to do the following:
 
-* Define "control flow".
-* Understand what a function is and why we use functions.
-* Declare and define a function as a block of code.
-* Understand how to pass input to a function.
-* Understand how to store the output of a function.
-* Understand the purpose of the return keyword.
-* Execute a function.
+- Define "control flow".
+- Understand what a function is and why we use functions.
+- Declare and define a function as a block of code.
+- Understand how to pass input to a function.
+- Understand how to store the output of a function.
+- Understand the purpose of the return keyword.
+- Execute a function.
 
 ## Introduction
 
@@ -30,7 +30,7 @@ We can think of functions as "recipes" of code; a fixed set of instructions or s
 
 Functions sometimes do not take in input, and sometimes do not return an output, but for now we will work with this basic structure.
 
-![](https://cloudreports.net/wp-content/uploads/2019/06/Function\_machine2.png)
+![](https://cloudreports.net/wp-content/uploads/2019/06/Function_machine2.png)
 
 ## Why We Use Functions
 
@@ -127,7 +127,7 @@ Let's test this function on its own outside of the Coding Basics starter code.
 1. Open Chrome Developer Tools by selecting View > Developer > JavaScript Console from the Chrome menu bar
 2. Copy the function definition of `convertKmToMiles` into the console and hit `Enter`
 3. The console should respond with an 'undefined', that is to be expected.
-   * If the expression doesn’t return a value, the Chrome console will report undefined — this doesn’t mean anything is wrong, it’s just letting you know that the previous expression didn’t return a result.
+   - If the expression doesn’t return a value, the Chrome console will report undefined — this doesn’t mean anything is wrong, it’s just letting you know that the previous expression didn’t return a result.
 4. Type the function name into the console and hit `Enter`. You should see the code block you defined.
 5. Run the function from the console again with a different input value
 
@@ -139,18 +139,18 @@ var convertKmToMiles = function (distanceInKm) {
 };
 
 // Step 4 - checking the definition in Chrome Dev Tools
-convertKmToMiles
+convertKmToMiles;
 
 // Step 5 - executing the function using the FUNCTION CALL in the Chrome Dev Tools
 convertKmToMiles(7676);
 
-/* 
- * REMEMBER that function call using the curved braces () 
+/*
+ * REMEMBER that function call using the curved braces ()
  * is what 'activates' the function.
  *
  * Using the function without the curved braces is referencing
  * the variable name that stores the function (cf. step 4)
-*/ 
+ */
 ```
 
 ### **Use Other Input Variables**
@@ -228,8 +228,8 @@ var calcCircleArea = function (radius) {
 
 We can now better understand the `main` function in our starter code. You may have noticed we currently do not execute `main` from `script.js`. Our starter code runs `main` for us whenever we click the Submit button. The code for this mechanism is inside `index.html`.
 
-* The `input` parameter of `main` is what the user types in the input box
-* The `return` value of `main` is what gets displayed in the output box
+- The `input` parameter of `main` is what the user types in the input box
+- The `return` value of `main` is what gets displayed in the output box
 
 With this in mind, assign the value of `input` to `myOutputValue` to see this connection. Then change the code again to assign the string value "wow hello" to `myOutputValue`.
 
@@ -253,22 +253,22 @@ Share your work with your section: save the code you write into another file. Na
 
 ### **Juice Wedding**
 
-It takes 4 oranges to make a 90ml glass of orange juice. When planning your wedding, you need to know how many oranges to buy so all your guests have 1 glass of juice. The user will enter a number of guests and the app will say how many oranges are needed and how many litres of orange juice you would get. ([Ref Solution](https://github.com/rocketacademy/basics-starter-code/tree/5.1-refSolns-juiceWedding))
+It takes 4 oranges to make a 90ml glass of orange juice. When planning your wedding, you need to know how many oranges to buy so all your guests have 1 glass of juice. The user will enter a number of guests and the app will say how many oranges are needed and how many litres of orange juice you would get. ([Ref Solution](https://github.com/rocketacademy/fundamentals-starter-code/tree/5.1-refSolns-juiceWedding))
 
 ### **SG Hugs**
 
-Everyone has a different gauge for how long they like to hug. The user can enter a number of seconds they like to hug on average, and the app will calculate how many years it will take to hug everyone in Singapore. You are allowed 9 hours a day to sleep and eat. ([Ref Solution](https://github.com/rocketacademy/basics-starter-code/tree/5.1-refSolns-sgHugs))
+Everyone has a different gauge for how long they like to hug. The user can enter a number of seconds they like to hug on average, and the app will calculate how many years it will take to hug everyone in Singapore. You are allowed 9 hours a day to sleep and eat. ([Ref Solution](https://github.com/rocketacademy/fundamentals-starter-code/tree/5.1-refSolns-sgHugs))
 
 ### **House Paint**
 
 Estimate the price of painting the interior of your home. The user will enter a dollar amount of paint per litre and the app will calculate how much it will cost.
 
 \
-Each room in your 6-room house has the same area to be painted: 3m x 3m. There are 6 windows and 8 doors in your designer home. Coincidentally, windows and doors all of the same size: 90cm x 150cm. Paint will cover 300 square meters per litre. You want to apply 2 coats of paint. ([Ref Solution](https://github.com/rocketacademy/basics-starter-code/tree/5.1-refSolns-housePaint))
+Each room in your 6-room house has the same area to be painted: 3m x 3m. There are 6 windows and 8 doors in your designer home. Coincidentally, windows and doors all of the same size: 90cm x 150cm. Paint will cover 300 square meters per litre. You want to apply 2 coats of paint. ([Ref Solution](https://github.com/rocketacademy/fundamentals-starter-code/tree/5.1-refSolns-housePaint))
 
 ### **Train Speed**
 
-Two trains are leaving to Tokyo. Train 1 is traveling 200kph, and will reach Tokyo in 2 hours. Train 2 is newer and can travel faster, but is delayed due to a signalling fault. Build an app for Train 2's conductor calculate how fast Train 2 needs to travel to arrive at Tokyo at the same time as Train 1, based on how long it was delayed. Output the speed in kph. ([Ref Solution](https://github.com/rocketacademy/basics-starter-code/tree/5.1-refSolns-trainSpeed))
+Two trains are leaving to Tokyo. Train 1 is traveling 200kph, and will reach Tokyo in 2 hours. Train 2 is newer and can travel faster, but is delayed due to a signalling fault. Build an app for Train 2's conductor calculate how fast Train 2 needs to travel to arrive at Tokyo at the same time as Train 1, based on how long it was delayed. Output the speed in kph. ([Ref Solution](https://github.com/rocketacademy/fundamentals-starter-code/tree/5.1-refSolns-trainSpeed))
 
 ## **Exercises (More Comfortable)**
 
