--- a/5-managing-state-and-input-validation/5.1-program-lifecycle-and-state.md
+++ b/5-managing-state-and-input-validation/5.1-program-lifecycle-and-state.md
@@ -4,10 +4,10 @@
 
 By the end of this lesson, you should be able to:
 
-* Explain the difference between a global and local variable.
-* Understand when and why to use global variables.
-* Declare and use global variables.
-* Briefly explain "function scope".
+- Explain the difference between a global and local variable.
+- Understand when and why to use global variables.
+- Declare and use global variables.
+- Briefly explain "function scope".
 
 ## Introduction
 
@@ -98,7 +98,7 @@ var papayaCount = 0;
 var main = function (input) {
   // Variables in the Function Scope (of the main function) - myOutputValue
   papayaCount = papayaCount + 1;
-  var myOutputValue = 'You have ' + papayaCount + ' papayas';
+  var myOutputValue = "You have " + papayaCount + " papayas";
   return myOutputValue;
 };
 ```
@@ -115,12 +115,12 @@ var bankRoll = 10;
 var main = function (input) {
   var randomDiceNumber = rollDice();
 
-  var myOutputValue = 'you lose. current bank roll: ' + bankRoll;
+  var myOutputValue = "you lose. current bank roll: " + bankRoll;
 
   if (randomDiceNumber == input) {
     bankRoll = bankRoll + 1;
 
-    myOutputValue = 'you win. current bank roll: ' + bankRoll;
+    myOutputValue = "you win. current bank roll: " + bankRoll;
   }
 
   return myOutputValue;
@@ -154,10 +154,10 @@ var rollDice = function () {
 var main = function (input) {
   var randomDiceNumber = rollDice();
 
-  var myOutputValue = 'you lose';
+  var myOutputValue = "you lose";
 
   if (randomDiceNumber == input) {
-    myOutputValue = 'you win';
+    myOutputValue = "you win";
   }
 
   return myOutputValue;
@@ -206,4 +206,4 @@ The player guess can be off by up to 4. If the player guess is off-by-4 they win
 
 ## Reference Solutions
 
-[Click here ](https://github.com/rocketacademy/basics-starter-code/blob/8.1-refSolns-moreComfortable/script.js)to view the reference solution. Please only refer to the reference solution after you have attempted the exercise. Note that there are many ways to implement the exercise and the reference solution is only 1 way.
+[Click here ](https://github.com/rocketacademy/fundamentals-starter-code/blob/8.1-refSolns-moreComfortable/script.js)to view the reference solution. Please only refer to the reference solution after you have attempted the exercise. Note that there are many ways to implement the exercise and the reference solution is only 1 way.
