--- a/5-managing-state-and-input-validation/5.2-program-state-for-game-modes.md
+++ b/5-managing-state-and-input-validation/5.2-program-state-for-game-modes.md
@@ -4,8 +4,8 @@
 
 By the end of this lesson, you should:
 
-* Know how to use [global variables](5.1-program-lifecycle-and-state.md#global-variables) to change the "state" of your program.
-* Be familiar with the concept and practice of "refactoring"
+- Know how to use [global variables](5.1-program-lifecycle-and-state.md#global-variables) to change the "state" of your program.
+- Be familiar with the concept and practice of "refactoring"
 
 ## Introduction
 
@@ -18,21 +18,21 @@ We can use global state to expand the functionality of our apps. For games, we c
 The following code outputs a different default quote depending on whether the app mode is green or blue. Note that we get the same output until we command the program to change modes. To change app modes, we can use the special input words `greenmode` and `bluemode`. Note that the initially-assigned value of `mode` is the default app mode.
 
 ```javascript
-var mode = 'green';
+var mode = "green";
 
 var main = function (input) {
-  if (input == 'greenmode') {
-    mode = 'green';
-  } else if (input == 'bluemode') {
-    mode = 'blue';
+  if (input == "greenmode") {
+    mode = "green";
+  } else if (input == "bluemode") {
+    mode = "blue";
   }
 
   var myOutputValue =
-    'A fool sees not the same tree that a wise man sees. -William Blake';
+    "A fool sees not the same tree that a wise man sees. -William Blake";
 
-  if (mode == 'blue') {
+  if (mode == "blue") {
     myOutputValue =
-      'The sea, once it casts its spell, holds one in its net of wonder forever. -Jacques Cousteau';
+      "The sea, once it casts its spell, holds one in its net of wonder forever. -Jacques Cousteau";
   }
 
   return myOutputValue;
@@ -46,9 +46,9 @@ var main = function (input) {
 In addition to keeping score, we may also want to persist data such as user name to personalise our app. In the following example, we persist user name when in a "waiting for user name" app mode. At the beginning of the game, the first input is saved as the user name. After that first input, the program changes the game mode to "dice game", and subsequent inputs are considered inputs to the dice game. Throughout the game, the app can refer to the `userName` variable to personalise output for the current user.
 
 ```javascript
-var currentGameMode = 'waiting for user name';
+var currentGameMode = "waiting for user name";
 var bankRoll = 10;
-var userName = '';
+var userName = "";
 
 var rollDice = function () {
   var randomDecimal = Math.random() * 6;
@@ -58,39 +58,39 @@ var rollDice = function () {
 };
 
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
 
-  if (currentGameMode == 'waiting for user name') {
+  if (currentGameMode == "waiting for user name") {
     // if the game mode is user name... set the name as the input
     userName = input;
 
     // now that we have the name, switch the mode
-    currentGameMode = 'dice game';
+    currentGameMode = "dice game";
 
-    myOutputValue = 'Hello ' + userName;
-  } else if (currentGameMode == 'dice game') {
+    myOutputValue = "Hello " + userName;
+  } else if (currentGameMode == "dice game") {
     // if the game mode is dice game... define userGuess as the input
     var userGuess = input;
     // dice game logic
     var randomDiceRoll = rollDice();
     myOutputValue =
       userName +
-      ' you lost! you guessed: ' +
+      " you lost! you guessed: " +
       input +
-      '. you rolled: ' +
+      ". you rolled: " +
       randomDiceRoll +
-      '. current bank roll: ' +
+      ". current bank roll: " +
       bankRoll;
 
     if (userGuess == randomDiceRoll) {
       bankRoll = bankRoll + 1;
       myOutputValue =
         userName +
-        ' you won! you guessed: ' +
+        " you won! you guessed: " +
         input +
-        '. you rolled: ' +
+        ". you rolled: " +
         randomDiceRoll +
-        '. your current bank roll: ' +
+        ". your current bank roll: " +
         bankRoll;
     }
   }
@@ -106,9 +106,9 @@ var main = function (input) {
 As our programs become larger and more complicated we want to be able to "**refactor**" our programs to be more concise, understandable, and testable. We can use functions as subroutines and use parameters and return values to help us control the flow of data in our program. The following example is a refactored version of the code from the previous section, where we extract the dice game logic and put it into a new function `playDiceGame`. This is desirable because it makes it easier to skim the logic of our app by reading the `main` function. It also makes it easier to test logic in isolation, for example by running functions independently in the browser console.
 
 ```javascript
-var currentGameMode = 'waiting for user name';
+var currentGameMode = "waiting for user name";
 var bankRoll = 10;
-var userName = '';
+var userName = "";
 
 var rollDice = function () {
   var randomDecimal = Math.random() * 6;
@@ -118,28 +118,28 @@ var rollDice = function () {
 };
 
 var playDiceGame = function (userName, userGuess) {
-  var message = '';
+  var message = "";
 
   // dice game logic
   var randomDiceRoll = rollDice();
   message =
     userName +
-    ' you lost! you guessed: ' +
+    " you lost! you guessed: " +
     userGuess +
-    '. you rolled: ' +
+    ". you rolled: " +
     randomDiceRoll +
-    '. current bank roll: ' +
+    ". current bank roll: " +
     bankRoll;
 
   if (userGuess == randomDiceRoll) {
     bankRoll = bankRoll + 1;
     message =
       userName +
-      ' you won! you guessed: ' +
+      " you won! you guessed: " +
       userGuess +
-      '. you rolled: ' +
+      ". you rolled: " +
       randomDiceRoll +
-      '. your current bank roll: ' +
+      ". your current bank roll: " +
       bankRoll;
   }
 
@@ -147,17 +147,17 @@ var playDiceGame = function (userName, userGuess) {
 };
 
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
 
-  if (currentGameMode == 'waiting for user name') {
+  if (currentGameMode == "waiting for user name") {
     // set the name
     userName = input;
 
     // now that we have the name, switch the mode
-    currentGameMode = 'dice game';
+    currentGameMode = "dice game";
 
-    myOutputValue = 'Hello ' + userName;
-  } else if (currentGameMode == 'dice game') {
+    myOutputValue = "Hello " + userName;
+  } else if (currentGameMode == "dice game") {
     myOutputValue = playDiceGame(userName, input);
   }
 
@@ -173,4 +173,4 @@ Duplicate the Blue / Green app above.
 
 ### Red Mode
 
-Add a Red mode to the game. A reference solution can be found [here](https://github.com/rocketacademy/basics-starter-code/tree/8.2-refSolns).
+Add a Red mode to the game. A reference solution can be found [here](https://github.com/rocketacademy/fundamentals-starter-code/tree/8.2-refSolns).
