Replace Basics with Fundamentals

--- a/2-basic-data-manipulation/2.1-operations.md
+++ b/2-basic-data-manipulation/2.1-operations.md
@@ -4,7 +4,7 @@
 
 By the end of this lesson, you should be able to:
 
-* Use mathematical _**operators**_ to perform mathematical _**operations**_ in the console of your browser.
+- Use mathematical _**operators**_ to perform mathematical _**operations**_ in the console of your browser.
 
 ## Introduction
 
@@ -12,7 +12,7 @@ By the end of this lesson, you should be able to:
 
 Coding means writing instructions for the computer to execute. We will begin with the most basic instructions the computer can execute, which is operations between 2 number values.
 
-## ****
+## \*\*\*\*
 
 ## **Setup**
 
@@ -53,7 +53,7 @@ The input here is a mathematical equation typed in by the user, you. You have _i
 {% hint style="info" %}
 These exercises may seem trivial, but mathematical operations are at the core of all computing instructions. Computers fundamentally _**compute.**_ That being said, they can get things predictably wrong. Try: `0.1 + 0.2` in your console. Did you get what you expect?
 
-Coding Basics will not cover why computers sometimes behave in odd ways, but you can read up more about this particular behaviour [here](https://0.30000000000000004.com) and [here](https://betterprogramming.pub/why-is-0-1-0-2-not-equal-to-0-3-in-most-programming-languages-99432310d476).
+Coding Fundamentals will not cover why computers sometimes behave in odd ways, but you can read up more about this particular behaviour [here](https://0.30000000000000004.com) and [here](https://betterprogramming.pub/why-is-0-1-0-2-not-equal-to-0-3-in-most-programming-languages-99432310d476).
 {% endhint %}
 
 ### Operators
