--- a/2-basic-data-manipulation/2.2-variables.md
+++ b/2-basic-data-manipulation/2.2-variables.md
@@ -4,18 +4,16 @@
 
 By the end of this lesson, you should be able to:
 
-* Describe what a variable is and how to assign it a value or expression.
-* Use the `var` **keyword** to declare a new JavaScript variable.
-* Explain how to achieve _accurate representation_ of your program with suitable variable names.
-* Use the camelCase naming convention for your JavaScript variable names.
+- Describe what a variable is and how to assign it a value or expression.
+- Use the `var` **keyword** to declare a new JavaScript variable.
+- Explain how to achieve _accurate representation_ of your program with suitable variable names.
+- Use the camelCase naming convention for your JavaScript variable names.
 
 ## Introduction
 
 To do more than just basic math, we need to store, access and manipulate data in a computer's _memory_. We do this by utilizing **variables** in programming.
 
 {% embed url="https://youtu.be/mBZrHgAja78" %}
-
-
 
 ## What are Variables?
 
@@ -45,20 +43,20 @@ var area = pi * radius * radius;
 ```
 
 {% hint style="info" %}
-Note: You may have seen `let` and `const` syntax being used to declare variables in JavaScript. `let` and `const` are both _relatively_ new ways to declare variables in JavaScript, and while `let` has a similar use case to `var,` they are different in ways which we will not delve into right now. For the purposes of Coding Basics, it will suffice to use `var`, but you are free to explore and experiment.
+Note: You may have seen `let` and `const` syntax being used to declare variables in JavaScript. `let` and `const` are both _relatively_ new ways to declare variables in JavaScript, and while `let` has a similar use case to `var,` they are different in ways which we will not delve into right now. For the purposes of Coding Fundamentals, it will suffice to use `var`, but you are free to explore and experiment.
 {% endhint %}
 
 ## **The Importance of Abstraction** <a href="#the-importance-of-abstraction" id="the-importance-of-abstraction"></a>
 
 If we wanted the same result we could also write the following.1var x = 3.14 \* 4 \* 4;Copied!But this would not be as _meaningful_ as our previous example.Our programs must not only _calculate_ values correctly, they must also accurately _represent_ the operations we are performing, in this case calculating the area of a circle. **The names of our variables give meaning to the data our code contains.**
 
-![Drake is not known for his programming skills. Don't be like Drake.](https://miro.medium.com/max/717/1\*7LO7JEAZbo6YmN8feAVCwg.png)
+![Drake is not known for his programming skills. Don't be like Drake.](https://miro.medium.com/max/717/1*7LO7JEAZbo6YmN8feAVCwg.png)
 
 ## **Variable Naming Convention**
 
-In JavaScript convention, ordinary variables are named with [lower camel case](https://en.wikipedia.org/wiki/Naming\_convention\_\(programming\)#Examples\_of\_multiple-word\_identifier\_formats). The name starts with a lowercase letter and every subsequent word starts with uppercase. For example, `bananaCount` or `firstDiceRoll`. This is _convention_, and will not affect code _functionality_. Different languages and communities have different conventions. Similar to driving conventions: in some countries, cars are driven on the left side, and on the right side in other countries.
+In JavaScript convention, ordinary variables are named with [lower camel case](<https://en.wikipedia.org/wiki/Naming_convention_(programming)#Examples_of_multiple-word_identifier_formats>). The name starts with a lowercase letter and every subsequent word starts with uppercase. For example, `bananaCount` or `firstDiceRoll`. This is _convention_, and will not affect code _functionality_. Different languages and communities have different conventions. Similar to driving conventions: in some countries, cars are driven on the left side, and on the right side in other countries.
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/CamelCase\_new.svg/1200px-CamelCase\_new.svg.png)
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/CamelCase_new.svg/1200px-CamelCase_new.svg.png)
 
 ## Exercises
 
