--- a/2-basic-data-manipulation/2.3-our-first-program.md
+++ b/2-basic-data-manipulation/2.3-our-first-program.md
@@ -6,18 +6,18 @@ At the end of this lesson, you should be able to:
 
 - Briefly explain what _String Values_ are.
 - **Concatenate** _String Variables_ together using the `+` **operator.**
-- Perform simple manipulation on user input of the Basics Starter Code template.
+- Perform simple manipulation on user input of the Fundamentals Starter Code template.
 
 ## Introduction
 
 {% embed url="https://youtu.be/pMMYj-Hbkxc" %}
 
-Let's run code outside the browser console. We'll create a basic program with a Coding Basics starter template.
+Let's run code outside the browser console. We'll create a basic program with a Coding Fundamentals starter template.
 
 ## Setup
 
-1. [Download the zipped folder](https://github.com/rocketacademy/fundamentals-starter-code/archive/refs/heads/main.zip) of the Coding Basics Starter template and extract it to an appropriate location in your computer - see the [suggested folder structure](../course-logistics/required-hardware-and-software/recommended-set-up.md#folder-structure-for-coding-basics).
-2. [Open your Basics folder in VSCode](../course-logistics/required-hardware-and-software/recommended-set-up.md#open-basics-folder-in-vscode).
+1. [Download the zipped folder](https://github.com/rocketacademy/fundamentals-starter-code/archive/refs/heads/main.zip) of the Coding Fundamentals Starter template and extract it to an appropriate location in your computer - see the [suggested folder structure](../course-logistics/required-hardware-and-software/recommended-set-up.md#folder-structure-for-coding-basics).
+2. [Open your Fundamentals folder in VSCode](../course-logistics/required-hardware-and-software/recommended-set-up.md#open-basics-folder-in-vscode).
 
 ## **Static Program Output**
 
