--- a/3-structuring-and-debugging-code/3.1-functions.md
+++ b/3-structuring-and-debugging-code/3.1-functions.md
@@ -64,7 +64,7 @@ var distanceInMiles = distanceInKm * 0.62;
 Use the `return` keyword to define the function's output value. For our `convertKmToMiles` function, our return value is the distance in miles.
 
 {% hint style="info" %}
-Note that the output of a function may not be the output of the overall program, because functions can call other functions. The output of the overall Coding Basics starter code program is the return value of the `main` function.
+Note that the output of a function may not be the output of the overall program, because functions can call other functions. The output of the overall Coding Fundamentals starter code program is the return value of the `main` function.
 {% endhint %}
 
 ```javascript
@@ -122,7 +122,7 @@ var myKmDistance = 4;
 convertKmToMiles(myKmDistance);
 ```
 
-Let's test this function on its own outside of the Coding Basics starter code.
+Let's test this function on its own outside of the Coding Fundamentals starter code.
 
 1. Open Chrome Developer Tools by selecting View > Developer > JavaScript Console from the Chrome menu bar
 2. Copy the function definition of `convertKmToMiles` into the console and hit `Enter`
@@ -235,7 +235,7 @@ With this in mind, assign the value of `input` to `myOutputValue` to see this co
 
 ## Exercises (Base)
 
-For each app, create a new copy of the Basics Starter Code folder.
+For each app, create a new copy of the Fundamentals Starter Code folder.
 
 For each exercise try to encapsulate each distinct operation inside a function that returns a value. For example, `daysToMinutes(3)` is a function that converts days to minutes, takes a number of days as input, and returns a number of minutes.
 
