--- a/6-arrays-and-iteration/6.1-arrays.md
+++ b/6-arrays-and-iteration/6.1-arrays.md
@@ -4,10 +4,10 @@
 
 By the end of this lesson, you should be able to:
 
-* Explain what an array is.
-* Use arrays to store similar "kinds" of data.
-* Access data stored in an array.
-* Use the built-in array methods of `push()` and `pop()` to manipulate data in an array
+- Explain what an array is.
+- Use arrays to store similar "kinds" of data.
+- Access data stored in an array.
+- Use the built-in array methods of `push()` and `pop()` to manipulate data in an array
 
 ## Introduction
 
@@ -27,10 +27,10 @@ Arrays are data structures that store 0 or more values of the same kind. By "kin
 JavaScript lets us add any data type into any array, regardless of what's already inside. The following would be considered valid JavaScript syntax.
 
 ```javascript
-var myValues = [23, 'rocks', true, 0.345, 'awesome'];
+var myValues = [23, "rocks", true, 0.345, "awesome"];
 ```
 
-However, the **concept** of the array is for holding data of the same kind, e.g. numerical dice rolls, and this almost always means the data is of the same JavaScript data type. Please do not deviate from this in Coding Basics.
+However, the **concept** of the array is for holding data of the same kind, e.g. numerical dice rolls, and this almost always means the data is of the same JavaScript data type. Please do not deviate from this in Coding Fundamentals.
 {% endhint %}
 
 ## 2 Conceptual Types of Arrays
@@ -45,20 +45,20 @@ We can use arrays in 2 conceptual ways: to store static-length data and to store
 
 ```javascript
 var daysOfTheWeek = [
-  'Monday',
-  'Tuesday',
-  'Wednesday',
-  'Thursday',
-  'Friday',
-  'Saturday',
-  'Sunday',
+  "Monday",
+  "Tuesday",
+  "Wednesday",
+  "Thursday",
+  "Friday",
+  "Saturday",
+  "Sunday",
 ];
 ```
 
 **Example: Array Containing Letters in the Alphabet**
 
 ```javascript
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 ```
 
 ### Arrays as Static-Length Collections with Dynamic Data
@@ -103,7 +103,7 @@ We access elements in an array through **"indexes"** that represent the position
 We can use square-bracket (`[]`) syntax to retrieve any element in an array by specifying that element's index in the square brackets.
 
 ```javascript
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 var value = letters[2];
 ```
 
@@ -113,6 +113,7 @@ What happens when we try to access an array element that doesn't exist?
 ```javascript
 letters[234534534534];
 ```
+
 {% endhint %}
 
 #### Using User Input as Array Index
@@ -120,10 +121,10 @@ letters[234534534534];
 The following example uses user input to retrieve a value at a specific index in the `letters` array.
 
 ```javascript
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 
 var main = function (input) {
-  var myOutputValue = 'your letter: ' + letters[input];
+  var myOutputValue = "your letter: " + letters[input];
   return myOutputValue;
 };
 ```
@@ -133,7 +134,7 @@ var main = function (input) {
 Array positions imply order, e.g. the element at index 0 comes before the element at index 1. The following array implies "a" is before "b".
 
 ```javascript
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 ```
 
 ## Array Data Manipulation
@@ -141,7 +142,7 @@ var letters = ['a', 'b', 'c'];
 Let's learn how to alter, insert, and remove data from arrays. Notice the following code does not manipulate array values. It stores the value of the 3rd array element in a variable `value`, but does not alter the `letters` array.
 
 ```javascript
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 var value = letters[2];
 ```
 
@@ -164,7 +165,7 @@ temperatures[0] = 99;
 
 ### Inserting and Removing New Elements from Arrays
 
-There are 2 methods we will use often in Coding Basics to add and remove elements from arrays: `push` and `pop`.
+There are 2 methods we will use often in Coding Fundamentals to add and remove elements from arrays: `push` and `pop`.
 
 #### `push`
 
@@ -202,10 +203,10 @@ var main = function (input) {
   var randomDiceNumber = rollDice();
   // Initialise output to communicate loss.
   // Output the record of all guesses regardless of loss or win.
-  var myOutputValue = 'You lose. Your guesses: ' + guesses;
+  var myOutputValue = "You lose. Your guesses: " + guesses;
   // If the guess matches the dice roll, change output to communicate win.
   if (randomDiceNumber == input) {
-    myOutputValue = 'You win. Your guesses: ' + guesses;
+    myOutputValue = "You win. Your guesses: " + guesses;
   }
   // Return output value.
   return myOutputValue;
