--- a/8-github/8.4-github-repo-browsing.md
+++ b/8-github/8.4-github-repo-browsing.md
@@ -4,9 +4,9 @@
 
 By the end of this lesson, you should:
 
-* Be familiar with navigating GitHub.
-* Know how to view the commit history of a repo.
-* Know how to navigate the Pull Requests tab in GitHub
+- Be familiar with navigating GitHub.
+- Know how to view the commit history of a repo.
+- Know how to navigate the Pull Requests tab in GitHub
 
 ## Introduction
 
@@ -35,7 +35,7 @@ One of the biggest benefits of Git is the ability to see contents of previous co
 {% hint style="info" %}
 **What if I want to undo something from a previous commit?**
 
-We can "roll back" our repos to a previous commit with the `git revert` command, but due to the small nature of our apps in Coding Basics, it may be easier to "roll forward" by copying the code we want from a previous commit in GitHub, pasting that code into our local repo, and creating a new commit for these changes.
+We can "roll back" our repos to a previous commit with the `git revert` command, but due to the small nature of our apps in Coding Fundamentals, it may be easier to "roll forward" by copying the code we want from a previous commit in GitHub, pasting that code into our local repo, and creating a new commit for these changes.
 {% endhint %}
 
 ## Exercises
