--- a/4-conditional-logic/4.4-input-validation.md
+++ b/4-conditional-logic/4.4-input-validation.md
@@ -4,14 +4,14 @@
 
 By the end of this lesson, you should:
 
-* Be familiar with the concept of "Data Types".
-* Understand what _input validation_ means and why we use it.
-* Know how to use the `Number()` function to convert a string to a number.
-* Know what the `NaN` data type is.
+- Be familiar with the concept of "Data Types".
+- Understand what _input validation_ means and why we use it.
+- Know how to use the `Number()` function to convert a string to a number.
+- Know what the `NaN` data type is.
 
 ## Introduction
 
-So far in any of our dice-guessing games, the program doesn't restrict players from entering "bananas", 38373, or any value other than 1 to 6. In the way we've written our code so far, there may not be errors for invalid input, but there will be situations in Coding Basics where invalid input causes syntax or logical errors. To preempt these errors, we may wish to guide the player by providing feedback when their input is invalid.
+So far in any of our dice-guessing games, the program doesn't restrict players from entering "bananas", 38373, or any value other than 1 to 6. In the way we've written our code so far, there may not be errors for invalid input, but there will be situations in Coding Fundamentals where invalid input causes syntax or logical errors. To preempt these errors, we may wish to guide the player by providing feedback when their input is invalid.
 
 We will use our dice game to demonstrate input validation. We'll first see how to detect if the player typed in a number, then we'll detect if the player's number is within the desired range of 1 to 6.
 
@@ -26,12 +26,12 @@ How can we check if the characters in `input` are _only_ numbers? If we expect o
 We can try to convert a variable from string to number type with the `Number` function. If the string value has only number characters in it, `Number` will transform the string into a number.
 
 ```javascript
-var input = '444';
+var input = "444";
 var inputNum = Number(input); // inputNum is 444
 ```
 
 {% hint style="warning" %}
-In certain projects and exercises during Coding Basics, we will compare the value of `input` with a number as part of program logic. This can result in unexpected errors if we do not transform `input` from string to number first.
+In certain projects and exercises during Coding Fundamentals, we will compare the value of `input` with a number as part of program logic. This can result in unexpected errors if we do not transform `input` from string to number first.
 
 Whenever we expect `input` to represent a number, we should always cast it to a number with `Number(input)` before using it. This will help prevent unexpected errors where `input` may not equal what we expect, for example when comparing "1" with 1.
 {% endhint %}
@@ -43,18 +43,18 @@ Whenever we expect `input` to represent a number, we should always cast it to a 
 When we use the `Number` function to convert a value that isn't only numbers, `Number` may return a `NaN` value. NaN stands for "not a number". For example, the following code generates `NaN`.
 
 ```javascript
-var input = 'papayas';
+var input = "papayas";
 Number(input);
 ```
 
 NaN also occurs when we attempt a math operation that doesn't result in a valid number. The following are examples.
 
 ```javascript
-2 * 'chocolate';
+2 * "chocolate";
 ```
 
 ```javascript
-'dogs' / 32;
+"dogs" / 32;
 ```
 
 ```javascript
@@ -68,11 +68,11 @@ var count = NaN;
 ```
 
 ```javascript
-var count = 'papayas' * 12;
+var count = "papayas" * 12;
 ```
 
 ```javascript
-var input = 'papayas';
+var input = "papayas";
 var inputCount = Number(input);
 ```
 
@@ -90,13 +90,13 @@ To help us implement our logic above, JavaScript provides a `Number.isNaN` funct
 
 ```javascript
 // this will say FALSE, which is incorrect
-Number('bananas') == NaN;
+Number("bananas") == NaN;
 ```
 
 The following is an example of `Number.isNaN`, which is built-in to JavaScript. `Number.isNaN` returns a boolean value.
 
 ```javascript
-var input = 'hello';
+var input = "hello";
 var result = Number(input);
 console.log(Number.isNaN(result));
 ```
@@ -109,7 +109,7 @@ Otherwise, if `Number(input)` is "Not a Number", only the `if` code block is exe
 
 ```javascript
 if (Number.isNaN(Number(input))) {
-  myOutputValue = 'sorry please enter a number.';
+  myOutputValue = "sorry please enter a number.";
 } else {
   // regular app logic here
 }
@@ -158,22 +158,22 @@ var rollDice = function () {
 };
 
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
 
   // first check if input is a number
   if (Number.isNaN(Number(input)) == true) {
-    myOutputValue = 'sorry please enter a number.';
+    myOutputValue = "sorry please enter a number.";
   } else {
     // then check if input is between 1 and 6
     if (input < 1 || input > 6) {
-      myOutputValue = 'sorry please enter a number from 1 - 6';
+      myOutputValue = "sorry please enter a number from 1 - 6";
     } else {
       // the input is 1-6, go ahead with the dice game
       var randomDiceNumber = rollDice();
       if (randomDiceNumber == input) {
-        myOutputValue = 'you win';
+        myOutputValue = "you win";
       } else {
-        myOutputValue = 'you lose';
+        myOutputValue = "you lose";
       }
     }
   }
@@ -200,17 +200,17 @@ var rollDice = function () {
 };
 
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
 
   // first check if input is a number
   if (Number.isNaN(Number(input)) == true) {
-    myOutputValue = 'sorry please enter a number.';
+    myOutputValue = "sorry please enter a number.";
     return myOutputValue;
   }
 
   // then check if input is between 1 and 6
   if (input < 1 || input > 6) {
-    myOutputValue = 'sorry please enter a number from 1 - 6';
+    myOutputValue = "sorry please enter a number from 1 - 6";
     return myOutputValue;
   }
 
@@ -218,11 +218,11 @@ var main = function (input) {
   var randomDiceNumber = rollDice();
 
   if (randomDiceNumber == input) {
-    myOutputValue = 'you win';
+    myOutputValue = "you win";
     return myOutputValue;
   }
 
-  myOutputValue = 'you lose';
+  myOutputValue = "you lose";
   return myOutputValue;
 };
 ```
