--- a/6-arrays-and-iteration/6.2-loops.md
+++ b/6-arrays-and-iteration/6.2-loops.md
@@ -4,10 +4,10 @@
 
 By the end of this lesson, you should be able to:
 
-* Explain how loops are used in the control flow of a program.
-* Use a `while` loop to run a code block for a fixed number of times.
-* Use loops within loops.
-* Be familiar with both the `for`-loop and `while`-loop syntax.
+- Explain how loops are used in the control flow of a program.
+- Use a `while` loop to run a code block for a fixed number of times.
+- Use loops within loops.
+- Be familiar with both the `for`-loop and `while`-loop syntax.
 
 ## Introduction
 
@@ -15,7 +15,7 @@ By the end of this lesson, you should be able to:
 
 We've defined an array, added values to it, and inspected those values individually, but haven't yet learned how to systematically manipulate each element in the array, no matter how long the array is. To do this we will learn 1 more control structure: "**loops"**.
 
-In Coding Basics we will mostly use loops to iterate over array elements. Loops can also be used without arrays, for example to perform an action until a condition is no longer `true`, but we will not see this often in Coding Basics.
+In Coding Fundamentals we will mostly use loops to iterate over array elements. Loops can also be used without arrays, for example to perform an action until a condition is no longer `true`, but we will not see this often in Coding Fundamentals.
 
 A loop defines a **code block** (with curly braces) that runs until the loop condition is no longer met. We'll look at loops in isolation first, then see them in the context of arrays.
 
@@ -29,7 +29,7 @@ var counter = 0;
 // Set the while loop condition to continue when counter is less than 10.
 while (counter < 10) {
   // Log hello with each iteration of the loop.
-  console.log('hello');
+  console.log("hello");
   // Increment the counter by 1 at the end of each loop iteration.
   counter = counter + 1;
 }
@@ -41,12 +41,12 @@ Let's create a program that outputs values in a loop, where the loop condition d
 
 ```javascript
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
   var counter = 0;
   // Continue the loop while counter is less than the input value
   while (counter < input) {
     // Add 1 "yes" to the output for every loop iteration.
-    myOutputValue = myOutputValue + 'yes';
+    myOutputValue = myOutputValue + "yes";
     counter = counter + 1;
   }
   return myOutputValue;
@@ -67,16 +67,16 @@ Let's create a program that outputs values in a loop, where loop condition depen
 
 ```javascript
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
   var counter = 0;
   // Continue the loop while counter is less than the input value
   while (counter < input) {
     // If counter is less than 5, add "yes" to output
     if (counter < 5) {
-      myOutputValue = myOutputValue + 'yes';
+      myOutputValue = myOutputValue + "yes";
       // Otherwise, add "no" to output
     } else {
-      myOutputValue = myOutputValue + 'no';
+      myOutputValue = myOutputValue + "no";
     }
     counter = counter + 1;
   }
@@ -90,7 +90,7 @@ Loops and conditionals alone are powerful tools to create output patterns. One o
 
 ```javascript
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
 
   var counter = 0;
   while (counter < input) {
@@ -98,10 +98,10 @@ var main = function (input) {
     // The modulus (%) operator returns the remainder after division
     // If a number divided by 2 equals 0, we consider it even.
     if (counter % 2 == 0) {
-      myOutputValue = myOutputValue + 'yes';
+      myOutputValue = myOutputValue + "yes";
       // Otherwise, add "no" to output
     } else {
-      myOutputValue = myOutputValue + 'no';
+      myOutputValue = myOutputValue + "no";
     }
     counter = counter + 1;
   }
@@ -120,13 +120,13 @@ In the following example, we define `rollDice` as a standalone function, and cal
 
 ```javascript
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
   var counter = 0;
   while (counter < input) {
     // Roll dice inside the loop, generating a random dice roll each iteration
     var diceRoll = rollDice();
     // Add each dice roll to output
-    myOutputValue = myOutputValue + ' ' + diceRoll + ' ';
+    myOutputValue = myOutputValue + " " + diceRoll + " ";
     // Increment counter at end of each iteration
     counter = counter + 1;
   }
@@ -144,7 +144,7 @@ If we put a loop inside a loop we can represent 2 dimensions of output. Note we 
 
 ```javascript
 var main = function (input) {
-  var myOutputValue = '';
+  var myOutputValue = "";
   // Initialise the outer counter, rowCounter
   var rowCounter = 0;
   while (rowCounter < input) {
@@ -154,11 +154,11 @@ var main = function (input) {
     // the inner loop condition is met.
     while (columnCounter < input) {
       // Each time the inner loop runs, it adds "x" to output
-      myOutputValue = myOutputValue + 'x';
+      myOutputValue = myOutputValue + "x";
       columnCounter = columnCounter + 1;
     }
     // At the end of each outer loop, add a <br> tag to begin a new row
-    myOutputValue = myOutputValue + '<br>';
+    myOutputValue = myOutputValue + "<br>";
     rowCounter = rowCounter + 1;
   }
   // After the outer loop has run to completion, return the output compiled
@@ -178,7 +178,7 @@ Most languages have variations on the while loop above that behave similarly. On
 var counter = 0;
 // Declare loop condition
 while (counter < 10) {
-  console.log('hello');
+  console.log("hello");
   // Increment counter
   counter += 1;
 }
@@ -189,7 +189,7 @@ while (counter < 10) {
 ```javascript
 // Initialise counter, declare loop condition, and increment counter in 1 line
 for (var counter = 0; counter < 10; counter += 1) {
-  console.log('hello');
+  console.log("hello");
 }
 ```
 
@@ -202,7 +202,7 @@ The key difference in for loop syntax is that **all loop management code is cons
 To solidify understanding of loops, we suggest using while loops until you are comfortable with loop mechanics.
 
 {% hint style="info" %}
-In other code examples you may see the incrementation step replaced by `counter++`. This adds 1 to `counter`. At RA we prefer ESLint's recommendation of `counter += 1` syntax. See ESLint's reasons against `++` syntax [here](https://eslint.org/docs/rules/no-plusplus).
+In other code examples you may see the incrementation step replaced by `counter++`. This adds 1 to `counter`. At Rocket we prefer ESLint's recommendation of `counter += 1` syntax. See ESLint's reasons against `++` syntax [here](https://eslint.org/docs/rules/no-plusplus).
 {% endhint %}
 
 ## Base Exercises
