--- a/8-github/8.2-github-fork-and-clone.md
+++ b/8-github/8.2-github-fork-and-clone.md
@@ -10,10 +10,10 @@ At the end of this lesson, you should:
 
 ## Introduction
 
-We will learn more features of Git and GitHub to start and submit Coding Basics projects. As a reminder, Git is the _version control system_ and GitHub is the code-hosting website built on top of Git. GitHub extends the capabilities of Git by adding visual code browsing, social features, and collaboration features.
+We will learn more features of Git and GitHub to start and submit Coding Fundamentals projects. As a reminder, Git is the _version control system_ and GitHub is the code-hosting website built on top of Git. GitHub extends the capabilities of Git by adding visual code browsing, social features, and collaboration features.
 
 {% hint style="warning" %}
-In the below video we demonstrate `git push origin master`, but for Coding Basics `git push` will suffice. `origin` refers to the target Git remote, and `master` refers to the target branch. **Rocket Academy has updated our repos to use `main` as the default branch** name as per GitHub's latest convention, so if you wanted to specify the full command including remote and branch for Basics, you could use **`git push origin main`**.
+In the below video we demonstrate `git push origin master`, but for Coding Fundamentals `git push` will suffice. `origin` refers to the target Git remote, and `master` refers to the target branch. **Rocket Academy has updated our repos to use `main` as the default branch** name as per GitHub's latest convention, so if you wanted to specify the full command including remote and branch for Fundamentals, you could use **`git push origin main`**.
 {% endhint %}
 
 {% embed url="https://youtu.be/uMNcnLWTmZU" %}
@@ -30,7 +30,7 @@ In the below video we demonstrate `git push origin master`, but for Coding Basic
 
 ## Git Clone
 
-We'll use a Git command to download or "clone" a copy of Coding Basics starter code. `<REPO_DOWNLOAD_URL>` is the download URL of our repo, obtained by clicking the Download Code button on the repo's [GitHub page](https://github.com/rocketacademy/fundamentals-starter-code). `<LOCAL_REPO_FOLDER_NAME>` is the name of the destination folder that is created (containing the contents of the repo) when we run the Git command.
+We'll use a Git command to download or "clone" a copy of Coding Fundamentals starter code. `<REPO_DOWNLOAD_URL>` is the download URL of our repo, obtained by clicking the Download Code button on the repo's [GitHub page](https://github.com/rocketacademy/fundamentals-starter-code). `<LOCAL_REPO_FOLDER_NAME>` is the name of the destination folder that is created (containing the contents of the repo) when we run the Git command.
 
 **Command Template**
 
@@ -50,13 +50,13 @@ GitHub enables us to coordinate differences between local and "official" version
 
 ### Git Push
 
-We will learn 1 new Git command `push` to send local code commits from our computers to GitHub. `push` can also be used as a general command to move code between "remote" repos, but during Coding Basics we will only be using `push` to push code to GitHub.
+We will learn 1 new Git command `push` to send local code commits from our computers to GitHub. `push` can also be used as a general command to move code between "remote" repos, but during Coding Fundamentals we will only be using `push` to push code to GitHub.
 
 ![The "git push" command can be used to send local code commits to GitHub.](<../.gitbook/assets/github-push (1).png>)
 
 ## Cheatsheet
 
-Here is the workflow for Coding Basics projects:
+Here is the workflow for Coding Fundamentals projects:
 
 1. Go to the project repo page. Click the "Fork" button to copy the repo to our own GitHub account.
 2. In the command line on our local computer, **clone the repo from our own Github account's copy of the repo.**
@@ -66,6 +66,6 @@ Here is the workflow for Coding Basics projects:
 
 ## Exercise
 
-1. Fork a copy of the [Basics _Beat That_! repo](https://github.com/rocketacademy/basics-beat-that) as setup for Project 2.
+1. Fork a copy of the [Fundamentals _Beat That_! repo](https://github.com/rocketacademy/basics-beat-that) as setup for Project 2.
 2. Clone the repo into a folder on your local machine.
 3. Once you start working on your project, make frequent commits and use `git push` to update your GitHub repo.
