--- a/8-github/8.5-deployment.md
+++ b/8-github/8.5-deployment.md
@@ -4,7 +4,7 @@
 
 By the end of this lesson, you should be able to:
 
-* Deploy your project as a GitHub Page.
+- Deploy your project as a GitHub Page.
 
 ## Walkthrough
 
@@ -36,6 +36,6 @@ Note that if for any reason you changed around any of the file structure of the 
 
 ## **Exercise**
 
-### **Deploy Coding Basics Projects**
+### **Deploy Coding Fundamentals Projects**
 
 Go into the settings and deploy your _Beat That!_ project.
