Fix references to basics to refer to fundamentals

--- a/7-version-control/7.1-git.md
+++ b/7-version-control/7.1-git.md
@@ -101,7 +101,7 @@ git diff <path>
 ![](<../.gitbook/assets/Screen Shot 2020-08-13 at 4.07.03 PM.png>)
 
 {% hint style="info" %}
-Often our changes will be longer than the terminal window height, and `git diff` will open a special menu to navigate these changes. To exit this menu, use `q`, as suggested in [1.3: Command Line's Troubleshooting section](https://github.com/rocketacademy/basics-docs/blob/main/7-version-control/1-introduction/1.3-command-line.md#troubleshooting-the-command-line).
+Often our changes will be longer than the terminal window height, and `git diff` will open a special menu to navigate these changes. To exit this menu, use `q`, as suggested in 1.3: Command Line's Troubleshooting section.
 {% endhint %}
 
 ### add
@@ -153,7 +153,7 @@ git log
 ```
 
 {% hint style="info" %}
-Eventually our list of commits will be longer than the terminal window height, and `git log` will open a special menu to navigate this list. To exit this menu, use `q`, as suggested in [1.3.: Command Line's Troubleshooting section](https://github.com/rocketacademy/basics-docs/blob/main/7-version-control/1-introduction/1.3-command-line.md#troubleshooting-the-command-line).
+Eventually our list of commits will be longer than the terminal window height, and `git log` will open a special menu to navigate this list. To exit this menu, use `q`, as suggested in 1.3: Command Line's Troubleshooting section.
 {% endhint %}
 
 ## Cheat Sheet
