--- a/2-basic-data-manipulation/2.3-our-first-program.md
+++ b/2-basic-data-manipulation/2.3-our-first-program.md
@@ -16,8 +16,8 @@ Let's run code outside the browser console. We'll create a basic program with a 
 
 ## Setup
 
-1. [Download the zipped folder](https://github.com/rocketacademy/fundamentals-starter-code/archive/refs/heads/main.zip) of the Coding Fundamentals Starter template and extract it to an appropriate location in your computer - see the [suggested folder structure](../course-logistics/required-hardware-and-software/recommended-set-up.md#folder-structure-for-coding-basics).
-2. [Open your Fundamentals folder in VSCode](../course-logistics/required-hardware-and-software/recommended-set-up.md#open-basics-folder-in-vscode).
+1. [Download the zipped folder](https://github.com/rocketacademy/fundamentals-starter-code/archive/refs/heads/main.zip) of the Coding Fundamentals Starter template and extract it to an appropriate location in your computer - see the [suggested folder structure](../course-logistics/required-hardware-and-software/recommended-set-up.md).
+2. [Open your Fundamentals folder in VSCode](../course-logistics/required-hardware-and-software/recommended-set-up.md).
 
 ## **Static Program Output**
 
