Standardise formatting of learning objectives

--- a/4-conditional-logic/4.2-pseudo-code-boolean-or.md
+++ b/4-conditional-logic/4.2-pseudo-code-boolean-or.md
@@ -2,11 +2,9 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-- Explain why writing pseudo-code can be helpful, and know how to write simple psuedo-code.
-- Understand what logical operators are.
-- Understand and use the logical OR operator.
+- Explain why writing pseudo-code can be helpful, and know how to write simple psuedo-code
+- Understand what logical operators are
+- Understand and use the logical OR operator
 
 ## Introduction
 
