--- a/4-conditional-logic/4.3-boolean-and-not.md
+++ b/4-conditional-logic/4.3-boolean-and-not.md
@@ -4,11 +4,11 @@
 
 In [4.2: Pseudo-Code, Boolean OR ](4.2-pseudo-code-boolean-or.md)we learned how to pseudo-code and use logical OR operators. In this module we will learn about the following.
 
-1. Code control: how to control program inputs to quickly verify program logic.
+1. Code control: how to control program inputs to quickly verify program logic
 2. Boolean values: what are boolean values and how are they stored in JavaScript?
 3. Boolean AND operator
 4. Boolean NOT operator
-5. Conditional debugging: how to efficiently debug conditional logic.
+5. Conditional debugging: how to efficiently debug conditional logic
 
 ## Code Control
 
@@ -95,10 +95,10 @@ var main = function (input) {
   var randomDiceNumber1 = rollDice();
   var randomDiceNumber2 = rollDice();
   // The default output value is "you lose".
-  var myOutputValue = 'you lose';
+  var myOutputValue = "you lose";
   // If the input matches both random dice numbers, output value is "you win".
   if (randomDiceNumber1 == input && randomDiceNumber2 == input) {
-    myOutputValue = 'you win';
+    myOutputValue = "you win";
   }
   return myOutputValue;
 };
@@ -118,7 +118,7 @@ Paired with `=`, `!=` is a "not equals" comparison operator, contrasting `==`. T
 
 ```javascript
 if (diceRoll != 2) {
-  console.log('dice roll is not 2!');
+  console.log("dice roll is not 2!");
 }
 ```
 
@@ -132,7 +132,7 @@ When comparing against `true` or `false` values, we might tend to write `didPlay
 var didPlayerWin = false;
 
 if (didPlayerWin != true) {
-  console.log('player didnt win!');
+  console.log("player didnt win!");
 }
 ```
 
@@ -142,7 +142,7 @@ However, the best practice is to put the `!` operator in front of the boolean va
 var didPlayerWin = false;
 
 if (!didPlayerWin) {
-  console.log('player didnt win!');
+  console.log("player didnt win!");
 }
 ```
 
@@ -210,22 +210,22 @@ if (
   randomDiceNumber + 1 == input ||
   randomDiceNumber - 1 == input
 ) {
-  myOutputValue = 'you win';
+  myOutputValue = "you win";
 }
 ```
 
 #### Sample Debugging Code
 
 ```javascript
-console.log('random dice number:');
+console.log("random dice number:");
 console.log(randomDiceNumber);
-console.log('input');
+console.log("input");
 console.log(input);
-console.log('random dice equals input:');
+console.log("random dice equals input:");
 console.log(randomDiceNumber == input);
-console.log('random dice plus 1 equals input:');
+console.log("random dice plus 1 equals input:");
 console.log(randomDiceNumber + 1 == input);
-console.log('random dice minus 1 equals input:');
+console.log("random dice minus 1 equals input:");
 console.log(randomDiceNumber - 1 == input);
 ```
 
@@ -254,4 +254,4 @@ If the above exercises are taking a long time, we may wish to complete the subse
 
 ## Further Reading
 
-Past students have found this [slide deck](https://www.cs.cmu.edu/\~mrmiller/15-110/Handouts/boolean.pdf) helpful in understanding Boolean logic.
+Past students have found this [slide deck](https://www.cs.cmu.edu/~mrmiller/15-110/Handouts/boolean.pdf) helpful in understanding Boolean logic.
