--- a/4-conditional-logic/4.4-input-validation.md
+++ b/4-conditional-logic/4.4-input-validation.md
@@ -2,12 +2,10 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should:
-
-- Be familiar with the concept of "Data Types".
-- Understand what _input validation_ means and why we use it.
-- Know how to use the `Number()` function to convert a string to a number.
-- Know what the `NaN` data type is.
+- Be familiar with the concept of "data types"
+- Understand what _input validation_ means and why we use it
+- Know how to use the `Number()` function to convert a string to a number
+- Know what the `NaN` data type is
 
 ## Introduction
 
