--- a/5-managing-state-and-input-validation/5.1-program-lifecycle-and-state.md
+++ b/5-managing-state-and-input-validation/5.1-program-lifecycle-and-state.md
@@ -2,12 +2,10 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-- Explain the difference between a global and local variable.
-- Understand when and why to use global variables.
-- Declare and use global variables.
-- Briefly explain "function scope".
+- Explain the difference between a global and local variable
+- Understand when and why to use global variables
+- Declare and use global variables
+- Briefly explain "function scope"
 
 ## Introduction
 
