--- a/6-arrays-and-iteration/6.1-arrays.md
+++ b/6-arrays-and-iteration/6.1-arrays.md
@@ -2,11 +2,9 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-- Explain what an array is.
-- Use arrays to store similar "kinds" of data.
-- Access data stored in an array.
+- Explain what an array is
+- Use arrays to store similar "kinds" of data
+- Access data stored in an array
 - Use the built-in array methods of `push()` and `pop()` to manipulate data in an array
 
 ## Introduction
