--- a/6-arrays-and-iteration/6.3-loops-with-arrays.md
+++ b/6-arrays-and-iteration/6.3-loops-with-arrays.md
@@ -2,10 +2,8 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-* Use the built-in `.length()` array method.
-* Use either a while- or for-loop to access or manipulate elements of an arbitrary-length array.
+- Use the built-in `.length()` array method
+- Use either a while- or for-loop to access or manipulate elements of an arbitrary-length array
 
 ## Introduction
 
@@ -20,7 +18,7 @@ The trick to using loops with arrays is to link the `counter` loop concept with 
 To get the length of an array, we can use the `.length` method. This method exists on every array.
 
 ```javascript
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 letters.length; // This returns 3, the number of elements in letters
 ```
 
@@ -30,7 +28,7 @@ In the following example we use `letters.length` to determine the number of loop
 // Index starts at 0, representing the 0th index of the array
 var index = 0;
 // We will iterate over the letters array
-var letters = ['a', 'b', 'c'];
+var letters = ["a", "b", "c"];
 // Run the loop while index is less than the length of the array
 while (index < letters.length) {
   // letters[index] represents a different element for each loop iteration
@@ -52,7 +50,7 @@ var names = [];
 var main = function (input) {
   // Set a boolean value found to a default value of false
   var found = false;
-  
+
   // Loop over the names array, and set found to true if the input name already
   // exists in the names array
   var index = 0;
@@ -64,13 +62,13 @@ var main = function (input) {
     index = index + 1;
   }
 
-  // If no duplicate name was found, add the input name to the names array 
+  // If no duplicate name was found, add the input name to the names array
   if (!found) {
     names.push(input);
   }
 
   // Return the full array of names
-  var myOutputValue = 'All names: ' + names;
+  var myOutputValue = "All names: " + names;
   return myOutputValue;
 };
 ```
