--- a/7-version-control/7.1-git.md
+++ b/7-version-control/7.1-git.md
@@ -2,13 +2,11 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-1. Explain what _Version Control_ is..
-2. Briefly explain what Git is, and why it is used.
-3. Be familiar with common git commands.
-4. Initialise a Git repository and make commits.
-5. Refer to the Git Cheat Sheet when needed.
+1. Explain what _Version Control_ is
+2. Briefly explain what Git is, and why it is used
+3. Be familiar with common git commands
+4. Initialise a Git repository and make commits
+5. Refer to the Git Cheat Sheet when needed
 
 ## Introduction
 
