--- a/8-github/8.1-intro-to-github.md
+++ b/8-github/8.1-intro-to-github.md
@@ -2,9 +2,7 @@
 
 ## Learning Objectives
 
-At the end of this lesson, you should:
-
-- Be _familiar_ with GitHub
+- Be familiar with GitHub
 - Understand briefly how GitHub extends the capabilities of Git
 
 ## Introduction
