--- a/8-github/8.2-github-fork-and-clone.md
+++ b/8-github/8.2-github-fork-and-clone.md
@@ -2,11 +2,9 @@
 
 ## Learning Objectives
 
-At the end of this lesson, you should:
-
-* Be able to use the GitHub Fork feature.
-* Be able to use the `git clone` command.
-* Be able to use the `git push` command.
+- Be able to use the GitHub Fork feature
+- Be able to use the `git clone` command
+- Be able to use the `git push` command
 
 ## Introduction
 
