--- a/8-github/8.5-deployment.md
+++ b/8-github/8.5-deployment.md
@@ -2,9 +2,7 @@
 
 ## Learning Outcomes
 
-By the end of this lesson, you should be able to:
-
-- Deploy your project as a GitHub Page.
+- Deploy your project as a GitHub Page
 
 ## Walkthrough
 
