--- a/2-basic-data-manipulation/2.1-operations.md
+++ b/2-basic-data-manipulation/2.1-operations.md
@@ -2,9 +2,7 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-- Use mathematical _**operators**_ to perform mathematical _**operations**_ in the console of your browser.
+- Use mathematical _**operators**_ to perform mathematical _**operations**_ in the console of your browser
 
 ## Introduction
 
