--- a/2-basic-data-manipulation/2.3-our-first-program.md
+++ b/2-basic-data-manipulation/2.3-our-first-program.md
@@ -2,11 +2,9 @@
 
 ## Learning Objectives
 
-At the end of this lesson, you should be able to:
-
-* Briefly explain what _String Values_ are.
-* **Concatenate** _String Variables_ together using the `+` **operator.**
-* Perform simple manipulation on user input of the Fundamentals Starter Code template.
+- Briefly explain what _String Values_ are
+- **Concatenate** _String Variables_ together using the `+` **operator**.
+- Perform simple manipulation on user input of the Fundamentals Starter Code template
 
 ## Introduction
 
@@ -120,6 +118,7 @@ Now whatever we type in the input box gets output to the output box.
 ```javascript
 var name = "Susan";
 ```
+
 {% endhint %}
 
 ### Interactive Messages
@@ -175,11 +174,12 @@ var myOutputValue =
 ```
 
 {% hint style="info" %}
-A common alternative to the above string formatting is to use [JavaScript template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template\_literals). The following syntax is equivalent to the syntax above.
+A common alternative to the above string formatting is to use [JavaScript template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals). The following syntax is equivalent to the syntax above.
 
 ```javascript
 var myOutputValue = `Hi! ${input} is equal to ${distanceInMiles} miles.`;
 ```
+
 {% endhint %}
 
 ## Exercise
