--- a/3-structuring-and-debugging-code/3.1-functions.md
+++ b/3-structuring-and-debugging-code/3.1-functions.md
@@ -2,15 +2,13 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to do the following:
-
-- Define "control flow".
-- Understand what a function is and why we use functions.
-- Declare and define a function as a block of code.
-- Understand how to pass input to a function.
-- Understand how to store the output of a function.
-- Understand the purpose of the return keyword.
-- Execute a function.
+- Define "control flow"
+- Understand what a function is and why we use functions
+- Declare and define a function as a block of code
+- Understand how to pass input to a function
+- Understand how to store the output of a function
+- Understand the purpose of the return keyword
+- Execute a function
 
 ## Introduction
 
