--- a/3-structuring-and-debugging-code/3.2-errors.md
+++ b/3-structuring-and-debugging-code/3.2-errors.md
@@ -2,12 +2,10 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to do the following:
-
-- Define and differentiate between "syntax errors" and "logical errors".
-- Know the difference between run-time and compile-time syntax errors.
-- Understand strategies to debug errors.
-- Utilise `console.log()` for effective debugging.
+- Define and differentiate between "syntax errors" and "logical errors"
+- Know the difference between run-time and compile-time syntax errors
+- Understand strategies to debug errors
+- Utilise `console.log()` for effective debugging
 
 ## Introduction
 
