--- a/4-conditional-logic/4.1-intro-to-logic.md
+++ b/4-conditional-logic/4.1-intro-to-logic.md
@@ -2,11 +2,9 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to do the following:
-
-* Know how logic is used to make programs more complex
-* Understand and use the `if` statement.
-* Understand and use the equality operator: `==`
+- Know how logic is used to make programs more complex
+- Understand and use the `if` statement.
+- Understand and use the equality operator: `==`
 
 ## Introduction
 
@@ -31,10 +29,10 @@ Let's write a program that changes the output value of `"hello world"` if we typ
 ```javascript
 var main = function (input) {
   // Set a default value for myOutputValue
-  var myOutputValue = 'hello world';
+  var myOutputValue = "hello world";
   // If input is our secret phrase, change the value of myOutputValue
-  if (input == 'palatable papaya') {
-    myOutputValue = 'you wrote the secret phrase!';
+  if (input == "palatable papaya") {
+    myOutputValue = "you wrote the secret phrase!";
   }
   // return myOutputValue as output
   return myOutputValue;
@@ -43,7 +41,7 @@ var main = function (input) {
 
 Our if statement is on line 5. The conditional inside it tests if `input` is equal to `'palatable papaya'`, our secret phrase. If `input` is equal to `'palatable papaya'`, the code runs between the curly braces on lines 5 and 7, i.e. the "if block". If `input` is not equal to our phrase, the if block does not run.
 
-Code blocks may or may not run depending on "[**control flow**](https://en.wikipedia.org/wiki/Control\_flow)", i.e. the logic of our app. The 1st way we learned to use code blocks was with functions. If statements are a 2nd way. We'll learn a 3rd code block syntax later in [6.2: Loops](../6-arrays-and-iteration/6.2-loops.md).
+Code blocks may or may not run depending on "[**control flow**](https://en.wikipedia.org/wiki/Control_flow)", i.e. the logic of our app. The 1st way we learned to use code blocks was with functions. If statements are a 2nd way. We'll learn a 3rd code block syntax later in [6.2: Loops](../6-arrays-and-iteration/6.2-loops.md).
 
 Try inputting secret and non-secret phrases into the program. Enter the secret phrase and click the button to see the different output. Enter anything else and click the button to see the default output.
 
@@ -53,7 +51,7 @@ Note the distinction in our code example between variable _**declaration**_ and 
 
 ### Equality
 
-We're using the "[**comparison operator**](https://www.w3schools.com/js/js\_comparisons.asp)" `==` to test if `input` is equal to `'palatable papaya'`.
+We're using the "[**comparison operator**](https://www.w3schools.com/js/js_comparisons.asp)" `==` to test if `input` is equal to `'palatable papaya'`.
 
 {% hint style="info" %}
 There are two comparison operators in JavaScript to check for equality, `==`, known as the abstract equality operator, and `===`, the strict equality operator. For the purpose of this course, `==` will suffice, but you are free to explore and experiment. You can read more about the in-depth differences between them in [this ](https://stackoverflow.com/questions/359494/which-equals-operator-vs-should-be-used-in-javascript-comparisons)discussion.
@@ -75,7 +73,7 @@ We will be using this 'Dice Rolling function' as a base to explore Logic and Con
 
 ### Random Number Generation
 
-To simulate dice, we first need random number generation. JavaScript can produce random numbers using a built-in "**library**" called [`Math`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\_Objects/Math) (_case-sensitive_). `Math` contains functions that perform common and helpful math operations.&#x20;
+To simulate dice, we first need random number generation. JavaScript can produce random numbers using a built-in "**library**" called [`Math`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math) (_case-sensitive_). `Math` contains functions that perform common and helpful math operations.&#x20;
 
 The function we need is `Math.random()`. **N**_**ote the function call using ()**_
 
@@ -89,7 +87,7 @@ Note that the `Math.random()` function does not take in an input.
 
 Since we wish to simulate dice with numbers between 1 to 6 inclusive, we have to manipulate the randomly-generated number to get what we want.
 
-To convert our random number to a valid dice roll value, we'll use another `Math` function: `Math.floor()`. We will follow the random integer generation example [here](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\_Objects/Math/random) to use `Math.floor()` to convert decimals to integers.
+To convert our random number to a valid dice roll value, we'll use another `Math` function: `Math.floor()`. We will follow the random integer generation example [here](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random) to use `Math.floor()` to convert decimals to integers.
 
 With `Math.random()` and `Math.floor()`, we can make a function that produces any random integer from 0 to a provided `max` number:
 
@@ -137,11 +135,11 @@ var main = function (input) {
   var randomDiceNumber = rollDice();
 
   // Default output value is 'you lose'.
-  var myOutputValue = 'you lose';
+  var myOutputValue = "you lose";
 
   // If input matches randomDiceNumber, update output.
   if (input == randomDiceNumber) {
-    myOutputValue = 'you win';
+    myOutputValue = "you win";
   }
 
   // Return output.
