--- a/5-managing-state-and-input-validation/5.2-program-state-for-game-modes.md
+++ b/5-managing-state-and-input-validation/5.2-program-state-for-game-modes.md
@@ -2,9 +2,7 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should:
-
-- Know how to use [global variables](5.1-program-lifecycle-and-state.md#global-variables) to change the "state" of your program.
+- Know how to use [global variables](5.1-program-lifecycle-and-state.md#global-variables) to change the "state" of your program
 - Be familiar with the concept and practice of "refactoring"
 
 ## Introduction
