--- a/6-arrays-and-iteration/6.2-loops.md
+++ b/6-arrays-and-iteration/6.2-loops.md
@@ -2,12 +2,10 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should be able to:
-
-- Explain how loops are used in the control flow of a program.
-- Use a `while` loop to run a code block for a fixed number of times.
-- Use loops within loops.
-- Be familiar with both the `for`-loop and `while`-loop syntax.
+- Explain how loops are used in the control flow of a program
+- Use a `while` loop to run a code block for a fixed number of times
+- Use loops within loops
+- Be familiar with both the `for`-loop and `while`-loop syntax
 
 ## Introduction
 
