--- a/8-github/8.3-github-pull-request.md
+++ b/8-github/8.3-github-pull-request.md
@@ -2,9 +2,7 @@
 
 ## Learning Outcomes
 
-By the end of this lesson, you should be able to:
-
-* Make a GitHub Pull Request.
+- Make a GitHub Pull Request
 
 ### GitHub Pull Request
 
