--- a/8-github/8.4-github-repo-browsing.md
+++ b/8-github/8.4-github-repo-browsing.md
@@ -2,10 +2,8 @@
 
 ## Learning Objectives
 
-By the end of this lesson, you should:
-
-- Be familiar with navigating GitHub.
-- Know how to view the commit history of a repo.
+- Be familiar with navigating GitHub
+- Know how to view the commit history of a repo
 - Know how to navigate the Pull Requests tab in GitHub
 
 ## Introduction
